Hice 3 test de integracion para probar el POST /reservas, que pasan los 3, falta actualizar el alojamiento para que tenga la nueva reserva, guardar los CambioEstadoReserva, y guardar las notificaciones del usuario en sus respectivos repos. Además cree errores comunes y agregué un mayor manejo de excepciones del que había en el controller
